# rsdnn

./: Cargo.toml  README.md
examples/: layer.rs  perceptron.rs  test.rs
src/: activation.rs  layer.rs  lib.rs  perceptron.rs
